--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@
 
 # Site
 title: 小日记
-subtitle:
+subtitle: 记录此刻
 description:
 keywords:
 author: jiantong.liu
-language:
+language: zh-CN
 timezone:
 
 # URL
