--- a/themes/configs/next.config.yml
+++ b/themes/configs/next.config.yml
@@ -408,8 +408,7 @@ gitment:
   cleanly: false # Hide 'Powered by ...' on footer, and more
   language: # Force language, or auto switch by theme
   github_user: newHotCat  # MUST HAVE, Your Github ID
-  github_repo: newhotcat.github.io # MUST HAVE, The repo you use to store Gitment comments
-  client_id: 17ddc971a5f3ee422159  # MUST HAVE, Github client id for the Gitment
+  github_repo: newhotcat.github.io # MUST HAVE, busuanzi_countGithub client id for the Gitment
   client_secret: 64808e73ba31f4ac740e8e57017e26bab063bb89 # EITHER this or proxy_gateway, Github access secret token for the Gitment
   proxy_gateway: # Address of api proxy, See: https://github.com/aimingoo/intersect
   redirect_protocol: # Protocol of redirect_uri with force_redirect_protocol when mint enabled
@@ -418,14 +417,14 @@ gitment:
 # Available value:
 #    button | slide
 # Warning: Baidu Share does not support https.
-#baidushare:
-##  type: button
+# baidushare: 
+  # type: button
 
 # Share
 # This plugin is more useful in China, make sure you known how to use it.
 # And you can find the use guide at official webiste: http://www.jiathis.com/.
 # Warning: JiaThis does not support https.
-jiathis: true
+# jiathis: 
   ##uid: Get this uid from http://www.jiathis.com/
 #add_this_id:
 
@@ -549,7 +548,7 @@ firestore:
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
 busuanzi_count:
   # count values only if the other configs are false
-  enable: false
+  enable: true
   # custom uv span for the whole site
   site_uv: true
   site_uv_header: <i class="fa fa-user"></i>
