--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.7.1"
+    "version": "3.9.0"
+  },
+  "scripts": {
+    "d": "hexo d -g",
+    "g": "hexo g -d"
   },
   "dependencies": {
     "hexo": "^3.7.1",
